# bookworm-hole-api

./: .deepsource.toml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.override.yml  docker-compose.yaml  pyproject.toml  skills-lock.json
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.devcontainer.yaml
.github/workflows/: ci.yml  coverage-badge.yml  post-merge.yml  release.yml
alembic/: env.py
alembic/versions/: 00562c775707_add_last_external_sync_at_to_releases.py  0bf9abf0e21e_add_collection_and_collection_item_.py  252715fa5bc0_add_user_model.py  30290a645ea8_add_reading_session_table.py  33b5e563ac6a_merge_wave4_entity_version_migration_.py  3cfc6a4101e7_add_external_source_records_table.py  51567b3c0db7_add_contributor_model_and_roles.py  5d6d472bee49_make_google_integration_timestamps_.py  5ea4e81da428_add_deletion_scheduled_at_to_user_make_.py  6c90a3dd1750_merge_wave1_wave2_migration_heads.py  6ebbed9e6a67_merge_wave3_import_migration_head.py  7eb8e96240ad_merge_wave6_audit_log_with_chat_.py  8500ecd54218_add_google_integration_table.py  8859de0dfcbe_merge_reading_session_contribution_.py  9d785df4139f_add_review_table.py  a11a5f31265f_add_release_fields_and_isbn_model.py  a1b2c3d4e5f6_add_friends_can_see_library_to_user.py  a1f2b3c4d5e6_add_audit_log_table.py  a2c0e5dc3468_enable_pg_trgm_and_add_contributor_full_.py  a76f77c4291d_make_refreshtoken_timestamps_timezone_.py  a7a67f27882c_add_book_fields_and_release_relationship.py  b1c2d3e4f5g6_add_password_reset_token_table.py  b53cf88d0835_add_book_status_model.py  b6e36fb94722_add_contribution_table.py  bba0f93ce4e4_add_import_record_table.py  c2ad0667b645_merge_wave7_gdpr_deletion_with_wave6_.py  c520013c9351_add_backup_record_table.py  cbd0cbca9f43_add_refresh_token_table.py  cf8dae74a470_add_friendship_table.py  d27a7afffe10_add_chat_tables.py  e1a9c2b7d4f0_add_entity_version_table.py  e39ed0c98c20_add_genre_flags_to_book.py  eda9397ffef8_test_book.py  f3c1e4c34c28_merge_wave5_chat_migration_with_entity_.py  fe22d67a5546_add_email_verified_at_to_user.py
app/: __main__.py  main.py
app/core/: audit_context.py  confg.py  config.py  db.py  deps.py  encryption.py  errors.py  lifespan.py  logging.py  middleware.py  redis.py  security.py
app/models/: __init__.py  audit_log.py  backup_record.py  base.py  book_status.py  books.py  catalog.py  chat.py  collection.py  contribution.py  contributor.py  entity_version.py  external_source.py  friendship.py  google_integration.py  import_record.py  mixins.py  (+6 more)
docs/: ai_integration.md  export_format.md
scripts/: create_gh_issues.py  purge_deleted_users.py  refresh_metadata.py  seed.py  seed_catalog.py  seed_data.py  seed_dev.py  seed_test.py
seeds/: catalog.json
tests/: README.md  conftest.py  test_account_deletion_service.py  test_admin_audit_logs_router.py  test_admin_catalog_imports_router.py  test_admin_contributions_router.py  test_admin_users_router.py  test_auth_router.py  test_auth_verify_router.py  test_backup_record_repository.py  test_backup_restore_service.py  test_backup_service.py  test_book_model.py  test_book_status_model.py  test_books_router.py  test_catalog_import_service.py  test_chat_model.py  test_chat_router.py  test_chat_websocket.py  test_collection_model.py  test_collections_router.py  test_config.py  test_contribution_model.py  test_contribution_service.py  test_contributions_router.py  test_contributor_repository.py  test_contributors_router.py  test_db_session.py  test_deps.py  test_email_verification_service.py  test_encryption.py  test_entity_version_history.py  test_external_adapter_registry.py  test_external_router.py  test_external_source_repository.py  test_friends_router.py  test_genre_mapping.py  test_google_books_adapter.py  test_google_drive_adapter.py  test_google_integration_service.py  (+27 more)
(+135 files in other folders)
