[project]
name = "bookworm-hole-api"
version = "0.1.0"
description = "API for Bookworm Hole"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.4",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.9",
]
