[project]
name = "bookworm-hole-api"
version = "0.1.0"
description = "API for Bookworm Hole"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.31.0",
    "babel>=2.18.0",
    "fastapi[standard]>=0.124.4",
    "greenlet>=3.3.0", # Required by SQLAlchemy on Apple Silicon
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.0",
    "python-stdnum>=2.2",
    "sqlalchemy[asyncio]>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.407",
    "ruff>=0.14.9",
]

[tool.setuptools]
packages = ["app"]

[tool.pyright]
# SQLModel types __tablename__ as declared_attr[Unknown] but string assignment is correct
reportIncompatibleVariableOverride = "none"
reportAssignmentType = "none"
include = ["app", "scripts"]
exclude = [".venv", "alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
