[project]
name = "bookworm-hole-api"
version = "0.1.0"
description = "API for Bookworm Hole"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.31.0",
    "babel>=2.18.0",
    "fastapi[standard]>=0.124.4",
    "greenlet>=3.3.0",             # Required by SQLAlchemy on Apple Silicon
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt[crypto]>=2.10.0",
    "python-stdnum>=2.2",
    "sentry-sdk[fastapi]>=2.19.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.407",
    "python-semantic-release>=9.15.0",
    "respx>=0.21.1",
    "ruff>=0.14.9",
    "setuptools==79.0.1",
]

[tool.setuptools]
packages = ["app"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_parser = "conventional"
major_on_zero = true
build_command = false

[tool.semantic_release.branches.main]
match = "main"

[tool.pyright]
typeCheckingMode = "strict"
# SQLModel types __tablename__ as declared_attr[Unknown] but string assignment is correct
reportIncompatibleVariableOverride = "none"
reportAssignmentType = "none"
include = ["app", "scripts"]
exclude = [".venv", "alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "BLE", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/*" = ["E501"]
